Move delete button up to avoid overlapping with tab selector

--- a/style-new.css
+++ b/style-new.css
@@ -669,7 +669,7 @@ body {
 
 .btn-delete-bottom {
     position: fixed;
-    bottom: 2rem;
+    bottom: calc(70px + 1rem);
     left: 2rem;
     width: 50px;
     height: 50px;
